include/sonare/sonare_c_mastering.h


typedef struct {
  float target_lufs;
  float ceiling_db;
  int true_peak_oversample;
  float release_ms;
  int apply_gain_at_input_rate;
} SonareMasteringConfig;
typedef struct {
  float* samples;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  int latency_samples;
  int loudness_target_limited;
} SonareMasteringResult;
typedef struct {
  const char* key;
  double value;
} SonareMasteringParam;
typedef struct {
  float* left;
  float* right;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  int latency_samples;
  int loudness_target_limited;
} SonareMasteringStereoResult;
typedef struct {
  SonareMasteringLoudnessSummary before;
  SonareMasteringLoudnessSummary after;
  float applied_gain_db;
  float max_gain_reduction_db;
  int loudness_target_limited;
  float band_energy_delta_db[SONARE_MASTERING_REPORT_BAND_COUNT];
} SonareMasteringReport;
typedef struct {
  float* samples;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  char** stages;  
  size_t stages_count;
  float output_true_peak_dbtp;
  float output_lra;
  int loudness_target_limited;
  char** stage_gain_reduction_stages;
  float* stage_gain_reduction_values;
  size_t stage_gain_reductions_count;
  SonareMasteringReport report;
} SonareMasteringChainResult;
typedef struct {
  float* left;
  float* right;
  size_t length;
  int sample_rate;
  float input_lufs;
  float output_lufs;
  float applied_gain_db;
  char** stages;
  size_t stages_count;
  float output_true_peak_dbtp;
  float output_lra;
  int loudness_target_limited;
  char** stage_gain_reduction_stages;
  float* stage_gain_reduction_values;
  size_t stage_gain_reductions_count;
  SonareMasteringReport report;
} SonareMasteringChainStereoResult;
SonareError sonare_mastering_process(const float* samples, size_t length, int sample_rate,
                                     const SonareMasteringConfig* config,
                                     SonareMasteringResult* out);
SonareError sonare_mastering_apply_processor(const char* processor_name, const float* samples,
                                             size_t length, int sample_rate,
                                             const SonareMasteringParam* params, size_t param_count,
                                             SonareMasteringResult* out);
SonareError sonare_mastering_apply_processor_stereo(const char* processor_name, const float* left,
                                                    const float* right, size_t length,
                                                    int sample_rate,
                                                    const SonareMasteringParam* params,
                                                    size_t param_count,
                                                    SonareMasteringStereoResult* out);
SonareError sonare_mastering_chain(const float* samples, size_t length, int sample_rate,
                                   const SonareMasteringParam* params, size_t param_count,
                                   SonareMasteringChainResult* out);
SonareError sonare_mastering_chain_stereo(const float* left, const float* right, size_t length,
                                          int sample_rate, const SonareMasteringParam* params,
                                          size_t param_count,
                                          SonareMasteringChainStereoResult* out);
const char* sonare_mastering_processor_names(void);
const char* sonare_mastering_pair_processor_names(void);
const char* sonare_mastering_pair_analysis_names(void);
const char* sonare_mastering_stereo_analysis_names(void);
const char* sonare_mastering_insert_names(void);
SonareError sonare_mastering_apply_pair_processor(const char* processor_name, const float* source,
                                                  const float* reference, size_t length,
                                                  int sample_rate,
                                                  const SonareMasteringParam* params,
                                                  size_t param_count, SonareMasteringResult* out);
SonareError sonare_mastering_apply_pair_processor_ex(
    const char* processor_name, const float* source, size_t source_length, const float* reference,
    size_t reference_length, int sample_rate, const SonareMasteringParam* params,
    size_t param_count, SonareMasteringResult* out);
SonareError sonare_mastering_analyze_pair(const char* analysis_name, const float* source,
                                          const float* reference, size_t length, int sample_rate,
                                          const SonareMasteringParam* params, size_t param_count,
                                          char** json_out);
SonareError sonare_mastering_analyze_pair_ex(const char* analysis_name, const float* source,
                                             size_t source_length, const float* reference,
                                             size_t reference_length, int sample_rate,
                                             const SonareMasteringParam* params, size_t param_count,
                                             char** json_out);
SonareError sonare_mastering_analyze_stereo(const char* analysis_name, const float* left,
                                            const float* right, size_t length, int sample_rate,
                                            const SonareMasteringParam* params, size_t param_count,
                                            char** json_out);
typedef struct {
  const char* name;
  float target_lufs;
  float ceiling_db;
} SonareStreamingPlatform;
SonareError sonare_mastering_streaming_preview(const float* samples, size_t length, int sample_rate,
                                               const SonareStreamingPlatform* platforms,
                                               size_t platform_count, char** json_out);
SonareError sonare_mastering_assistant_suggest(const float* samples, size_t length, int sample_rate,
                                               const SonareMasteringParam* params,
                                               size_t param_count, char** json_out);
SonareError sonare_mastering_audio_profile(const float* samples, size_t length, int sample_rate,
                                           const SonareMasteringParam* params, size_t param_count,
                                           char** json_out);
SonareEq* sonare_eq_create(double sample_rate, int max_block_size);
void sonare_eq_destroy(SonareEq* eq);
SonareError sonare_eq_set_band(SonareEq* eq, int index, const char* band_json);
void sonare_eq_clear(SonareEq* eq);
SonareError sonare_eq_set_phase_mode(SonareEq* eq, int mode);
SonareError sonare_eq_match(SonareEq* eq, const float* source, const float* reference,
                            size_t length, int sample_rate, int max_bands);
void sonare_eq_set_auto_gain(SonareEq* eq, int enabled);
float sonare_eq_last_auto_gain_db(const SonareEq* eq);
SonareError sonare_eq_set_gain_scale(SonareEq* eq, float scale);
SonareError sonare_eq_set_output_gain_db(SonareEq* eq, float gain_db);
SonareError sonare_eq_set_output_pan(SonareEq* eq, float pan);
int sonare_eq_latency_samples(const SonareEq* eq);
SonareError sonare_eq_set_sidechain(SonareEq* eq, const float* const* channels, int num_channels,
                                    int num_samples);
void sonare_free_mastering_result(SonareMasteringResult* result);
void sonare_free_mastering_stereo_result(SonareMasteringStereoResult* result);
void sonare_free_mastering_chain_result(SonareMasteringChainResult* result);
void sonare_free_mastering_chain_stereo_result(SonareMasteringChainStereoResult* result);
typedef struct SonareStreamingMasteringChain SonareStreamingMasteringChain;
SonareStreamingMasteringChain* sonare_streaming_mastering_chain_create(
    const SonareMasteringParam* params, size_t param_count);
SonareStreamingMasteringChain* sonare_streaming_mastering_chain_create_ex(
    const SonareMasteringParam* params, size_t param_count, float loudness_static_gain_db,
    float loudness_static_gain_peak_db);
SonareError sonare_streaming_mastering_chain_prepare(SonareStreamingMasteringChain* handle,
                                                     int sample_rate, int max_block_size,
                                                     int num_channels);
SonareError sonare_streaming_mastering_chain_process_mono(SonareStreamingMasteringChain* handle,
                                                          float* samples, size_t num_samples);
SonareError sonare_streaming_mastering_chain_process_stereo(SonareStreamingMasteringChain* handle,
                                                            float* left, float* right,
                                                            size_t num_samples);
SonareError sonare_streaming_mastering_chain_reset(SonareStreamingMasteringChain* handle);
int sonare_streaming_mastering_chain_latency_samples(const SonareStreamingMasteringChain* handle);
void sonare_streaming_mastering_chain_destroy(SonareStreamingMasteringChain* handle);